# stitchr

./: .gitignore  .skip-ci  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  install.sh  justfile  rompatcher_js_hashes.txt
crates/cli/: Cargo.toml
crates/cli/benches/: only_bench.rs
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: apply.rs  dispatch.rs  mod.rs  verify.rs
crates/cli/src/commands/apply/: input.rs  mod.rs  output.rs
crates/cli/src/commands/apply/only/: mod.rs  ra.rs  verify.rs
crates/cli/src/utils/: logging.rs  mod.rs  paths.rs  retroachievements.rs  validation.rs
crates/cli/tests/: only_modes_tests.rs  retroachievements_tests.rs
crates/features/: Cargo.toml
crates/features/src/: lib.rs
crates/features/src/retroachievements/: api.rs  mod.rs  types.rs
crates/features/src/retroachievements/hash/: iso9660.rs  mod.rs  n64.rs  nds.rs  nes.rs  ps2.rs  psp.rs  psx.rs  snes.rs
crates/features/src/validation/: trait_def.rs  types.rs  validator.rs
crates/features/src/validation/algorithms/: adler32.rs  crc32.rs  md5.rs  mod.rs  sha.rs
crates/features/tests/: retroachievements_tests.rs  validation_tests.rs
crates/formats/: Cargo.toml
crates/formats/FORMAT_TEMPLATE/: README.md
crates/formats/FORMAT_TEMPLATE/src/: apply_mod.rs  constants.rs  helpers.rs  metadata.rs  mod.rs  validate.rs
crates/formats/FORMAT_TEMPLATE/tests/: mod.rs
crates/formats/benches/: aps_bench.rs  bdf_bench.rs  bps_bench.rs  ebp_bench.rs  ips_bench.rs  ppf_bench.rs  rup_bench.rs  ups_bench.rs  xdelta_bench.rs
crates/formats/src/: lib.rs
crates/formats/src/aps/: mod.rs
crates/formats/src/aps/gba/: constants.rs  helpers.rs  metadata.rs  mod.rs  validate.rs
crates/formats/src/aps/gba/apply/: mod.rs
crates/formats/src/aps/n64/: helpers.rs  metadata.rs  mod.rs  parsing.rs  record_validation.rs  types.rs  validate.rs  validation.rs
crates/formats/src/aps/n64/apply/: mod.rs  records.rs
crates/formats/src/bdf/: apply.rs  constants.rs  metadata.rs  mod.rs  validate.rs
crates/formats/src/bps/: helpers.rs  metadata.rs  mod.rs  validate.rs  varint.rs
crates/formats/src/bps/apply/: actions.rs  mod.rs
crates/formats/src/bps/apply/actions/: context.rs  mod.rs  source_copy.rs  source_read.rs  target_copy.rs  target_read.rs
crates/formats/src/ebp/: helpers.rs  metadata.rs  mod.rs  validate.rs
crates/formats/src/ebp/apply/: mod.rs
crates/formats/src/ips/: constants.rs  metadata.rs  mod.rs  validate.rs
crates/formats/src/ips/apply/: mod.rs  records.rs
crates/formats/src/ppf/: helpers.rs  metadata.rs  mod.rs  validate.rs
crates/formats/src/ppf/apply/: mod.rs
crates/formats/src/rup/: constants.rs  helpers.rs  metadata.rs  mod.rs  validate.rs  varint.rs
crates/formats/src/rup/apply/: file.rs  mod.rs  overflow.rs  records.rs
crates/formats/src/ups/: helpers.rs  metadata.rs  mod.rs  validate.rs  varint.rs
crates/formats/src/ups/apply/: mod.rs
crates/formats/src/xdelta/: address_cache.rs  apply.rs  checksum.rs  constants.rs  decoder.rs  headers.rs  metadata.rs  mod.rs  parser.rs  validate.rs
crates/formats/tests/: aps_gba_integration.rs  aps_n64_integration.rs  bdf_integration.rs  bps_integration.rs  ebp_integration.rs  ips_integration.rs  ppf_integration.rs  rup_integration.rs  ups_integration.rs  xdelta_integration.rs
crates/formats/tests/aps_gba/: apply_tests.rs  checksum_validation_tests.rs  metadata_tests.rs  mod.rs  validate_tests.rs  verify_tests.rs
crates/formats/tests/aps_gba/apply/: basic_tests.rs  error_tests.rs  helpers.rs  mod.rs  record_tests.rs  resize_tests.rs
crates/formats/tests/aps_n64/: apply_tests.rs  checksum_validation_tests.rs  metadata_tests.rs  mod.rs  validate_tests.rs  verify_tests.rs
crates/formats/tests/aps_n64/apply/: basic_tests.rs  error_tests.rs  resize_tests.rs  rle_tests.rs
crates/formats/tests/bdf/: metadata_tests.rs  mod.rs  validate_tests.rs
crates/formats/tests/bdf/apply/: basic_tests.rs  complex_tests.rs  error_tests.rs  mod.rs
crates/formats/tests/bps/: apply_tests.rs  checksum_validation_tests.rs  metadata_tests.rs  mod.rs  validate_tests.rs  varint_tests.rs  verify_tests.rs
crates/formats/tests/bps/apply/: action_tests.rs  error_tests.rs  mixed_tests.rs
crates/formats/tests/bps/checksum_validation/: file_integrity_tests.rs  integration_tests.rs
crates/formats/tests/ebp/: json_metadata_tests.rs  metadata_tests.rs  mod.rs  validate_tests.rs
crates/formats/tests/ebp/apply/: basic_tests.rs  error_tests.rs  json_tests.rs  mod.rs  rle_tests.rs
crates/formats/tests/ebp/checksum_validation/: file_integrity_tests.rs  integration_tests.rs
crates/formats/tests/ips/: apply_tests.rs  checksum_validation_tests.rs  metadata_tests.rs  mod.rs  validate_tests.rs
crates/formats/tests/ips/apply/: basic_tests.rs  error_tests.rs  rle_tests.rs
crates/formats/tests/ips/checksum_validation/: file_integrity_tests.rs  integration_tests.rs
crates/formats/tests/ppf/: apply_tests.rs  metadata_tests.rs  validate_tests.rs
crates/formats/tests/ppf/apply/: basic_tests.rs  error_tests.rs  record_tests.rs  undo_tests.rs  version_tests.rs
crates/formats/tests/rup/: checksum_validation_tests.rs  metadata_tests.rs  validate_tests.rs  varint_tests.rs
crates/formats/tests/rup/apply/: basic_tests.rs  error_tests.rs  undo_tests.rs
crates/formats/tests/ups/: checksum_validation_tests.rs  metadata_tests.rs  validate_tests.rs  varint_tests.rs  verify_tests.rs
crates/formats/tests/ups/apply/: basic_tests.rs  error_tests.rs  mod.rs  resize_tests.rs  xor_tests.rs
crates/formats/tests/xdelta/: address_cache_tests.rs  apply_tests.rs  headers_tests.rs  parser_tests.rs
crates/formats/tests/xdelta/apply/: basic_tests.rs  copy_tests.rs  error_tests.rs  instruction_tests.rs  window_tests.rs
docs/: API.md  (+3 more)
fuzz/: Cargo.toml  crash-5b0a465ec5e6194dcaaf48b6eaec520b162defdd  crash-a369a198b45607f92395f7f2034bfd15f3dc5c76
fuzz/fuzz_targets/: fuzz_aps.rs  fuzz_bdf.rs  fuzz_bps.rs  fuzz_detect.rs  fuzz_ebp.rs  fuzz_ips.rs  fuzz_ppf.rs  fuzz_rup.rs  fuzz_ups.rs  fuzz_xdelta.rs
(+21 files in other folders)
