[package]
name = "stitchr-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for ROM patching"

[lib]
name = "stitchr_cli"
path = "src/lib.rs"

[[bin]]
name = "stitchr"
path = "src/main.rs"

[dependencies]
stitchr-core = { path = "../core" }
stitchr-formats = { path = "../formats" }
stitchr-features = { path = "../features" }
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }

[features]
default = ["validation", "retroachievements"]
validation = ["stitchr-features/validation"]
retroachievements = ["stitchr-features/retroachievements"]

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "only_bench"
harness = false
